--- a/EDA_R_FinalProject/EDA_R_FinalProject_Submission.Rmd
+++ b/EDA_R_FinalProject/EDA_R_FinalProject_Submission.Rmd
@@ -1495,14 +1495,15 @@ This has been an interesting project.  My original intent was to use the zip cod
 
 * Populous counties with large urban centers do not have unusually high vaccine exemption rates at the county level.  This appears to be the domain of smaller, rural counties.
 * MMR vaccine exemption rates do not track 1:1 with total vaccine exemption rates, it appears that people are choosy about what they don't get vaccinated for.
-* Something about school types, acually read through your assement at each sectoin and pick some stuff
+* There is some variation of exemptions by school type but not as dramatic as expected.  I think this is partially because I have lumped all private schools into one bin, but no tall private schools are alike.  Parsing the brand or types of private schools may be informative.
 * Exemption rates have low variability from year to year.
 
 and some less than surprising findings:
 
 * Non-medical exemptions occur at a much higher rate than medical exemptions
 * Non-medical exemption rates have a strong correlation with total exemption rates
-* look at list and put in some more stuff
+
+In general, the body of scientific evidence suggests that vaccine exemption rates below 5-10% (depending on disease attributes) puts the non-immune population (no natural immunity and low resitance and have not received vaccine or the vaccine was not effective) at risk.  In WA state, the vast majority of exemptions are personal belief (non-medical) exemptions.  At the county level there are 6 counties with mean exemption rates exceeding 10% with even more exceeding the 5% MMR threshold. 
 
 Now that I have a solid understanding of the underlying data I would like to do the following as next steps.
 
@@ -1511,6 +1512,8 @@ Now that I have a solid understanding of the underlying data I would like to do 
 * Create economic and demographic data tables for later combination with a subset of the vaccine exemption data (likely city and zip code level) to see what relationships between and amongst variables with respect to exemption rates.
 
 I also plan to revisit the data set containing other disease exemption data to see how each of those varies with total exemption rate and get a better idea of what diesease people are not being vaccinated for at specific geographical levels.
+
+
 
 
 # References 
