--- a/EDA_R_FinalProject/EDA_R_FinalProject_Submission.Rmd
+++ b/EDA_R_FinalProject/EDA_R_FinalProject_Submission.Rmd
@@ -2,38 +2,54 @@ Exploration of WA DOH School Exemption Data over 3 School Years by Andrew T. Bau
 ========================================================
 #Introduction#
 
-Recent news media coverage and my own personal interest inspired me to explore a school vaccination data set for WA state.  WA DOH employees generously assembled
-3 data sets for my project for school years 2011-2012, 2012-2013, and 2013-2014.  The 2011-2012 set is the most comprehensive in terms of school covered and relevant fields.  Each data set contains an observation about a school.  The 3 data sets were bound into one data set, then explored.  
+Recent news media coverage and my own personal interest inspired me to explore 
+a school vaccination data set for WA state.  WA DOH employees generously 
+assembled3 data sets for my project for school years 2011-2012, 2012-2013, and 
+2013-2014.  The 2011-2012 set is the most comprehensive in terms of school 
+covered and relevant fields.  Each data set contains an observation about a 
+school.  The 3 data sets were bound into one data set, then explored.  
 
-The initial data and cleaning/assembly of the combined data frame can be found here:
+The initial data and cleaning/assembly of the combined data frame can be found 
+here:
 [githubrepo](https://github.com/baumanab/EDA_R_Udacity/tree/master/EDA_R_FinalProject/EDA_R_FinalProject.Rmd)
 
 Additional cleaning and wrangling can be found here:
 [githubrepo](https://github.com/baumanab/EDA_R_Udacity/blob/master/EDA_R_FinalProject/EDA_R_FinalProject_WADOH_DataFrameWrangle.Rmd)
 
-An initial exploration and some additional corrections for student enrollment, is here:
+An initial exploration and some additional corrections for student enrollment, 
+is here:
 [githubrepo](https://github.com/baumanab/EDA_R_Udacity/blob/master/EDA_R_FinalProject/WADOH_DataExplore.Rmd)
 
 
-The current state is a rough approach and far from perfect.  I plan to revisit this as I discover additional elements that need cleaning.  I am currently 
-working on a more readable and organized version of the data wrangling using piping, so that changes are easy to make and push to the .rds file called as 
+The current state is a rough approach and far from perfect.  I plan to revisit 
+this as I discover additional elements that need cleaning.  I am currently 
+working on a more readable and organized version of the data wrangling using 
+piping, so that changes are easy to make and push to the .rds file called as 
 data for this project.
 
 There are some aspects of vaccination and the spread of disease through 
-populations that are best left to subject matter experts.  I consulted CDC publications throughout this analysis and I encourage the reader to do the same.
+populations that are best left to subject matter experts.  I consulted CDC 
+publications throughout this analysis and I encourage the reader to do the same.
 
 For example, what is the vaccinatation rate threshold that should not be 
-exceeded to maintain herd immunity?  This is complex question.  A typical answer is 10%.  There are assumptions made regarding mixing of populations and how 
+exceeded to maintain herd immunity?  This is complex question.  A typical answer
+is 10%.  There are assumptions made regarding mixing of populations and how 
 fast a contagion spreads.  This is even more complex in the context of school 
 data where there is a wide range of populations and students may come from a 
 large geographical area.  The latter is particularly true of private schools 
 where students may not necessarily live within a specific geographical region.
 
-In regards to spread of disease, some disease are more contagios than others and have  a range of opportunities for exposure.  For example, while Hep B is fairly contagious (~ 100 X times HIV), since it is blood-borne, the opportunity for exposure is less than something like the common cold.  Measles is particularly contagious with a high exposure opportunity and inforomation available from the CDC suggest that vaccination rates <= 95% pose a risk.  Bear is mind that this 
+In regards to spread of disease, some disease are more contagios than others and
+have  a range of opportunities for exposure.  For example, while Hep B is fairly contagious (~ 100 X times HIV), since it is blood-borne, the opportunity for 
+exposure is less than something like the common cold.  Measles is particularly 
+contagious with a high exposure opportunity and inforomation available from the
+CDC suggest that vaccination rates <= 95% pose a risk.  Bear is mind that this 
 is factoring in that not all those vaccinated will actually be immune, so even 
 at 100% exemption rate, 100% immunity would not be expected.
 
-For the purposes of this analysis, I set the outbreak risk thresholds at 90% for general vaccination rates and 95% for MMR.  That translates to 5% exempt for MMR and 10% exempt general.   
+For the purposes of this analysis, I set the outbreak risk thresholds at 90% 
+for general vaccination rates and 95% for MMR.  That translates to 5% exempt for
+MMR and 10% exempt general.   
 
 
 ```{r echo=FALSE, message=FALSE, warning=FALSE, packages}
@@ -66,9 +82,12 @@ str(vaccReported)
 ```
 ##Alter Data##
 
-* Select fields:  Not all of the fields in the data set are of interest for this analysis.  Limiting the fields to those of interest simplifies the data frame considerably.  The selected fields are: school_year, school_code, school_name, school_type, school_city,school_state, school_zip, school_county, 
-school_district, district_code, enrolled, total_exemptions, medical_exempt, nonmedical_exempt, exempt_MMR, percent_exempt, percent_medical_exempt,
-percent_nonmedexempt, percent_exempt_MMR
+* Select fields:  Not all of the fields in the data set are of interest for this
+analysis.  Limiting the fields to those of interest simplifies the data frame 
+considerably.  The selected fields are: school_year, school_code, school_name, 
+school_type, school_city,school_state, school_zip, school_county,school_district, district_code, enrolled, total_exemptions, medical_exempt, nonmedical_exempt, 
+exempt_MMR, percent_exempt, percent_medical_exempt,percent_nonmedexempt, 
+percent_exempt_MMR
 
 ``` {r echo = FALSE ,alter_data}
 #limit fields
@@ -111,7 +130,8 @@ ggplot(aes(x = enrolled), data = vaccReported) +
   scale_x_continuous(limits = c(0,5100), breaks = seq(0, 5100, 500))
 ```
 
-This is a long tailed distribution, a feature exhibited by most distributions in this data set.  Log transformations are performed to visualize the data.
+This is a long tailed distribution, a feature exhibited by most distributions 
+in this data set.  Log transformations are performed to visualize the data.
 
 ```{r echo = FALSE, dist_enrollment_cont}
 
@@ -185,7 +205,11 @@ ggplot(aes(x = percent_exempt, y = ..density..), data = vaccReported) +
 
 #plot select counties to compare to King
   
-ggplot(aes(x = percent_exempt, y = ..density..), data = subset(vaccReported, school_county == "KING" | school_county == "FERRY" | school_county == "CLARK" | school_county == "PIERCE" | school_county == "SAN JUAN")) +
+ggplot(aes(x = percent_exempt, y = ..density..), 
+       data = subset(vaccReported, 
+                     school_county == "KING" | school_county == "FERRY" | 
+                       school_county == "CLARK" | school_county == "PIERCE" | 
+                       school_county == "SAN JUAN")) +
   geom_freqpoly(binwidth = .5, aes(color = school_county, size = 1.25, 
                                    alpha = .5)) +
   scale_x_log10()
@@ -198,10 +222,13 @@ ggplot(aes(x = percent_exempt, y = ..density..), data = subset(vaccReported, sch
 * Year to year distributions are similiar for total and rate
 * most schools fall into a rate range of 2-25%
 * King County has the highest proportion of exemptions
-* There appears to be some smaller counties (i.e. Ferry, San Juan) and others with more density at higher exemption rates than King and Pierce county (most populous counties in WA)
+* There appears to be some smaller counties (i.e. Ferry, San Juan) and others 
+with more density at higher exemption rates than King and Pierce county (most 
+populous counties in WA)
 
 
-**Note:**  Higher exemption rates of ~ > 50% appear to be associated with lower levels of enrollment (< 100 students).  This will be investigated in the 
+**Note:**  Higher exemption rates of ~ > 50% appear to be associated with lower 
+levels of enrollment (< 100 students).  This will be investigated in the 
 bivariate section.
 
 
@@ -245,7 +272,8 @@ ggplot(aes(x = percent_medical_exempt, y = ..density..), data = vaccReported) +
   scale_x_log10(breaks = brks3)
   
 ##freqpoly proportion of percent medical exempt, by county, color = year
-ggplot(aes(x = percent_medical_exempt, y = ..count../sum(..count..)), data = subset(vaccReported, vaccReported$percent_medical_exempt > 0)) +
+ggplot(aes(x = percent_medical_exempt, y = ..count../sum(..count..)), 
+       data = subset(vaccReported, vaccReported$percent_medical_exempt > 0)) +
   geom_freqpoly(binwidth = log(1.25), aes(color = school_year)) +
   facet_wrap(~school_county) +
   scale_x_log10()
@@ -300,7 +328,8 @@ ggplot(aes(x = percent_nonmedexempt, y = ..density..), data = vaccReported) +
   scale_x_log10(breaks = brks3)
   
 ##freqpoly proportion of percent nonmedical exempt, by county, color = year
-ggplot(aes(x = percent_nonmedexempt, y = ..count../sum(..count..)), data = vaccReported) +
+ggplot(aes(x = percent_nonmedexempt, y = ..count../sum(..count..)), 
+       data = vaccReported) +
   geom_freqpoly(binwidth = .5, aes(color = school_year)) +
   facet_wrap(~school_county) +
   scale_x_log10()
@@ -379,7 +408,10 @@ ggplot(aes(x = percent_exempt_MMR, y = ..density..), data = vaccReported) +
 ##Explore Exemption Types##
 
 Gather terms for exemption type (melt) the dataframe, the calculate the % of 
-total exemptions that are of a particular type (medical or non-medical)  While this is not a tidy data frame it is a convenient way to look at observations by exemption type.  I am using this to develop a better understanding of the propotion of exemptions that are non-medical.
+total exemptions that are of a particular type (medical or non-medical)  While 
+this is not a tidy data frame it is a convenient way to look at observations by 
+exemption type.  I am using this to develop a better understanding of the 
+propotion of exemptions that are non-medical.
 ```{r echo=FALSE, exemption_types}
 
 melt <- gather(vaccReported_NLT_10_NGT_2500,exemption_type,exemptions,
@@ -390,7 +422,8 @@ names(melt)
 summary(melt)
 
 #add percent by exemption type
-melt$percent_exemption_type <- round((melt$exemptions/melt$total_exemptions)*100,digits = 2)
+melt$percent_exemption_type <- round((melt$exemptions/melt$total_exemptions)*100,
+                                     digits = 2)
 
 str(melt)
 names(melt)
@@ -429,16 +462,22 @@ and MMR.
 School enrollment and school type.
 
 ### Did you create any new variables from existing variables in the dataset?
-I created % of each total and each exemption using the number respective to the exemtion and enrollment, for each schools.
+I created % of each total and each exemption using the number respective to the 
+exemption and enrollment, for each schools.
 
 ### Of the features you investigated, were there any unusual distributions? Did you perform any operations on the data to tidy, adjust, or change the form of the data? If so, why did you do this?
-I was suprised to see that two of the smaller counties, Ferry and San Juan had distributions shifted to higher percent of all exemptions than King County.  The narrative in the Seattle media led me to believe that the highest exemption 
-rates would be observed in King County and the Seattle area in general.  I was also surprised to find the public and private schools have similiar 
+I was suprised to see that two of the smaller counties, Ferry and San Juan had 
+distributions shifted to higher percent of all exemptions than King County.  The narrative in the Seattle media led me to believe that the highest exemption 
+rates would be observed in King County and the Seattle area in general.  I was 
+also surprised to find the public and private schools have similiar 
 distribuions, albeit different proportions, respective to exemption type.  
 This is the case on a proportion basis, but not for rate.  However, the schools
-in these counties tend to be much smaller so the rates shift dramatically per exempt student.  There was substantial tidying of the orignal data sets as per 
+in these counties tend to be much smaller so the rates shift dramatically per 
+exempt student.  There was substantial tidying of the orignal data sets as per 
 the github links in the introduction.  I extracted a subset of the data 
-consisting of only schools that reported exemptions for the three schools years.  This elminated ~ 1200 observations but was necessary since non-reporting schools are missing all exemption values and typcially enrollment as well.
+consisting of only schools that reported exemptions for the three schools years.
+This elminated ~ 1200 observations but was necessary since non-reporting schools
+are missing all exemption values and typcially enrollment as well.
 
 
 # Bivariate Plots Section
@@ -449,7 +488,8 @@ consisting of only schools that reported exemptions for the three schools years.
 
 
 plot_bivar <- function(data=vaccReported, xvar,yvar, alpha=1,add_color=TRUE,
-                       color_factor="school_year",add_smooth=FALSE,method="auto")
+                       color_factor="school_year",add_smooth=FALSE,
+                       method="auto")
 {
   
     library(ggplot2)
@@ -471,12 +511,47 @@ plot_bivar <- function(data=vaccReported, xvar,yvar, alpha=1,add_color=TRUE,
     p
 }
 
+
+plot_bivar_box <- function(data=vaccReported, xvar,yvar, alpha=1,add_color=FALSE,
+                       color_factor="school_year",add_jitter=FALSE,
+                       jitter_alpha=1)
+{  
+    library(ggplot2)  
+      
+    p <- ggplot(data, aes_string(x=xvar,y=yvar))      
+
+    if(add_color) {
+        p <- p + geom_boxplot(alpha = alpha, aes_string(color = color_factor)) 
+    } else {
+        p <- p + geom_boxplot(alpha = alpha)
+    }  
+    
+    if(add_jitter) {
+      p <- p + geom_jitter(alpha=jitter_alpha)
+    }
+    
+    p
+}
+
+
+
+
 iter_plot <- function(names,data=vaccReported, xvar, alpha=1,add_color=TRUE,
                        color_factor="school_year",add_smooth=FALSE,
                       method="auto"){
   for(name in names){
-    print(plot_bivar(data=vaccReported, xvar,yvar = name, alpha=1,add_color=TRUE,
-                       color_factor="school_year",add_smooth=FALSE,method="auto"))
+    print(plot_bivar(data, xvar,yvar = name, alpha,add_color,
+                       color_factor,add_smooth,method))
+  }
+}
+
+iter_plot_box <- function(names,data=vaccReported, xvar, alpha=1,
+                          add_color=FALSE,color_factor="school_year",
+                          add_jitter=FALSE,jitter_alpha=1){
+  for(name in names){
+    print(plot_bivar_box(data, xvar,yvar=name, alpha,
+                         add_color, color_factor,
+                         add_jitter,jitter_alpha))
   }
 }
 
@@ -500,7 +575,10 @@ plot_bivar(data = subset(vaccReported,enrolled <= 2500),xvar="enrolled",
 
 ```
 
-For most of the data (enrollment up to ~1500) there is a linear relationship between total exemptions and number of students enrolled, this isn't surprising.  It would be more intersting to look at the rate, since it is normalized for population.
+For most of the data (enrollment up to ~1500) there is a linear relationship 
+between total exemptions and number of students enrolled, this isn't surprising.  
+It would be more intersting to look at the rate, since it is normalized for 
+population.
 
 ##Exemption rate vs enrollment##
 ```{r echo = FALSE}
@@ -544,7 +622,9 @@ cor.test(vaccReported$total_exemptions,vaccReported$percent_exempt_MMR)
 
 ```
 
-Weak positive correlation between total exemptions and both total and specific exemption types.  Medical and non-medical exempt have ~ the same correlation to total exemptions.
+Weak positive correlation between total exemptions and both total and specific 
+exemption types.  Medical and non-medical exempt have ~ the same correlation 
+to total exemptions.
 
 ##Specific exemptions vs. enrollment##
 
@@ -575,11 +655,15 @@ iter_plot(exemptions[2:3], xvar="total_exemptions",alpha=.5,add_smooth = TRUE)
 
 ```
 
-There is an interesting relationship between total exemptions and medical exemptions.  The correlation is weak up to about 150 exemptions and then takes 
-off, becoming negative at about 300 exemptions.  Some of this is because there a very few schools beyond 150 exemptions, but note by the point size that this 
-does not track strictly to school size (number of enrolled students).
+There is an interesting relationship between total exemptions and medical 
+exemptions.  The correlation is weak up to about 150 exemptions and then takes 
+off, becoming negative at about 300 exemptions.  Some of this is because 
+there a very few schools beyond 150 exemptions, but note by the point size 
+that this does not track strictly to school size (number of enrolled students).
 
-There is a strong positive correlation between total exemptions and non-medical exemptions.  The is also a strong positive correlation between total exemptions and MMR exemptions, but not as strong as non-medical exemptions.  
+There is a strong positive correlation between total exemptions and non-medical 
+exemptions.  The is also a strong positive correlation between total exemptions 
+and MMR exemptions, but not as strong as non-medical exemptions.  
 
 ##Specific exemption rates vs. total exemption rate##
 
@@ -609,7 +693,8 @@ linear_MMR_rate
 
 ```
 
-Showing code here for sake of clarity.  Calculating predicted MMR rate and non-medical exempt rate using linear fit.
+Showing code here for sake of clarity.  Calculating predicted MMR rate and 
+non-medical exempt rate using linear fit.
 
 ```{r}
 
@@ -658,9 +743,12 @@ vaccReported_NLT_10_NGT_2500 <- subset(vaccReported,vaccReported$enrolled >= 10
                                        & vaccReported$enrolled <= 2500) %>%
   arrange(desc(percent_exempt))
 
-vaccReported_NLT_10_NGT_2500_2013 <- subset(vaccReported_NLT_10_NGT_2500, school_year == "2013")
+vaccReported_NLT_10_NGT_2500_2013 <- subset(vaccReported_NLT_10_NGT_2500, 
+                                            school_year == "2013")
 
-vaccReported_NLT_100_NGT_2500 <- subset(vaccReported,vaccReported$enrolled >= 100 & vaccReported$enrolled <= 2500) %>%
+vaccReported_NLT_100_NGT_2500 <- subset(vaccReported,
+                                        vaccReported$enrolled >= 100 & 
+                                          vaccReported$enrolled <= 2500) %>%
   arrange(desc(percent_exempt))
 
 #group by county
@@ -867,9 +955,6 @@ rm(by_county_exempt,by_county_exempt_type,by_county_medexempt,
 
 ```
 
-
-
-
 ##Analyzing the grouped data##
 
 Grouped data per above used for the following sections.
@@ -877,67 +962,39 @@ Grouped data per above used for the following sections.
 ##Exemptions by school year##
 ```{r echo=FALSE}
 
+box_exemptions = append(exemptions,"total_exemptions",0)
 
-ggplot(data = vaccReported, aes(x = school_year, y = total_exemptions)) +
-  geom_boxplot()
+iter_plot_box(box_exemptions,xvar="school_year",add_color=FALSE)
 
-ggplot(data = vaccReported, aes(x = school_year, y = medical_exempt)) +
-  geom_boxplot()
-
-ggplot(data = vaccReported, aes(x = school_year, y = nonmedical_exempt)) +
-  geom_boxplot()
-
-ggplot(data = vaccReported, aes(x = school_year, y = exempt_MMR)) +
-  geom_boxplot()
-
-ggplot(data = vaccReported, aes(x = school_year, y = total_exemptions)) +
-  geom_boxplot() +
-  geom_jitter(alpha = .1)
+plot_bivar_box(xvar="school_year",yvar="total_exemptions",add_jitter=TRUE,
+               jitter_alpha=.1)
 
 ```
 
-Except for the astounding number of outliers, there is not much to see from year to year, please move along.
+Except for the astounding number of outliers, there is not much to see from 
+year to year, please move along.
 
 ##Exemptions by school type##
 ```{r echo=FALSE}
 
-ggplot(data = vaccReported, aes(x = school_type, y = total_exemptions)) +
-  geom_boxplot() +
-  geom_jitter(alpha = .1)
-
-ggplot(data = vaccReported, aes(x = school_type, y = medical_exempt)) +
-  geom_boxplot() +
-  geom_jitter(alpha = .1)
-  
-
-ggplot(data = vaccReported, aes(x = school_type, y = nonmedical_exempt)) +
-  geom_boxplot() +
-  geom_jitter(alpha = .1)
-
-ggplot(data = vaccReported, aes(x = school_type, y = exempt_MMR)) +
-  geom_boxplot() +
-  geom_jitter(alpha = .1)
+iter_plot_box(box_exemptions,xvar="school_type",add_jitter=TRUE,jitter_alpha=.1)
 
 ```
 
-Public shcools have a higher median and larger spread of total exemptions, non-medical exemptions, and MMR exemptions.  The spread is very tight for medical exemptions, with comparable medians.  Some of the variability in the public schools can be explained by the fact that public schools have a larger range of enrolled students.  However, this doesn't explain observations for medical exemptions.
+Public shcools have a higher median and larger spread of total exemptions, 
+non-medical exemptions, and MMR exemptions.  The spread is very tight for 
+medical exemptions, with comparable medians.  Some of the variability in the 
+public schools can be explained by the fact that public schools have a larger 
+range of enrolled students.  However, this doesn't explain observations for 
+medical exemptions.
 
 ##Exemption rates by school year##
 
 ```{r echo=FALSE}
 
+box_percent_exemptions <- append(percent_exemptions,"percent_exempt",0)
 
-ggplot(data = vaccReported, aes(x = school_year, y = percent_exempt)) +
-  geom_boxplot()
-
-ggplot(data = vaccReported, aes(x = school_year, y = percent_medical_exempt)) +
-  geom_boxplot()
-
-ggplot(data = vaccReported, aes(x = school_year, y = percent_nonmedexempt)) +
-  geom_boxplot()
-
-ggplot(data = vaccReported, aes(x = school_year, y = percent_exempt_MMR)) +
-  geom_boxplot()
+iter_plot_box(box_exemptions,xvar="school_year")
 
 ```
 
@@ -947,27 +1004,18 @@ Second verse same as the first.
 
 ```{r echo=FALSE}
 
-
-ggplot(data = vaccReported, aes(x = school_type, y = percent_exempt)) +
-  geom_boxplot() +
-  geom_jitter(alpha = .1)
-
-ggplot(data = vaccReported, aes(x = school_type, y = percent_medical_exempt)) +
-  geom_boxplot() +
-  geom_jitter(alpha = .1)
-
-ggplot(data = vaccReported, aes(x = school_type, y = percent_nonmedexempt)) +
-  geom_boxplot() +
-  geom_jitter(alpha = .1)
-
-ggplot(data = vaccReported, aes(x = school_type, y = percent_exempt_MMR)) +
-  geom_boxplot() +
-  geom_jitter(alpha = .1)
+iter_plot_box(box_percent_exemptions,xvar="school_type",add_jitter=TRUE,
+              jitter_alpha=.1)
 ```
 
-This is interesting to me.  The median level is about the same for public vs. private (not-public) but the spread is much greater or private.  I've looked at analyses from other states that essentially show that not all private schools, even by type of private school (Waldorf, Montessori) are created equal in terms 
-of vaccination attitudes (tendency towards personal/non-medical exemptions).  I don't know if this is true of my data set, but there seems to be more 
-variability in private vs. public schools.  These plots suggest this is true of non-medical and MMR exemptions, but not medical exemptions.
+This is interesting to me.  The median level is about the same for public vs. 
+private (not-public) but the spread is much greater or private.  I've looked at 
+analyses from other states that essentially show that not all private schools, 
+even by type of private school (Waldorf, Montessori) are created equal in terms 
+of vaccination attitudes (tendency towards personal/non-medical exemptions).  
+I don't know if this is true of my data set, but there seems to be more 
+variability in private vs. public schools.  These plots suggest this is true of 
+non-medical and MMR exemptions, but not medical exemptions.
 
 
 
@@ -976,43 +1024,47 @@ variability in private vs. public schools.  These plots suggest this is true of 
 ```{r echo =FALSE}
 
 
-ggplot(data = vaccReported, aes(x = percent_nonmedexempt, 
-                                y = percent_medical_exempt)) +
-  geom_line() +
-  geom_smooth()
+plot_bivar(xvar="percent_nonmedexempt",yvar="percent_medical_exempt", 
+           alpha=1,add_color=FALSE,add_smooth=TRUE,method="auto")
 
-ggplot(data = vaccReported, aes(x = percent_medical_exempt, 
-                                y = percent_exempt_MMR)) +
-  geom_line() +
-  geom_smooth()
 
-ggplot(data = vaccReported, aes(x = percent_nonmedexempt, 
-                                y = percent_exempt_MMR)) +
-  geom_line() +
-  geom_smooth()
 
+plot_bivar(xvar="percent_medical_exempt",yvar="percent_exempt_MMR", 
+           alpha=1,add_color=FALSE,add_smooth=TRUE,method="auto")
+
+
+plot_bivar(xvar="percent_nonmedexempt",yvar="percent_exempt_MMR", 
+           alpha=1,add_color=FALSE,add_smooth=TRUE)
 
 ```
 
-Medical and non-medical exemption rates or MMR exemption rates do not have a strong relationship.  Non-medical exemption rates and MMR exemption rates have strong positive relationship.
+Medical and non-medical exemption rates or MMR exemption rates do not have a 
+strong relationship.  Non-medical exemption rates and MMR exemption rates have 
+strong positive relationship.
 
 
 # Bivariate Analysis
 
 ### Talk about some of the relationships you observed in this part of the investigation. How did the feature(s) of interest vary with other features in the dataset?
 
-* Total exemptions tracked with enrollment up to ~ 1500 students, but with high variance
+* Total exemptions tracked with enrollment up to ~ 1500 students, but with high 
+variance.
 * Exemption rates both general and specific do not track with enrollment but 
-there is a weak positive correlation between exemption rates and total 
-exemptions (makes mathematical sense).
-* Non-medical and MMR exemption rates have a strong positive correlation with enrollment, but medical exemption rates do not.
+there is a weak positive correlation between exemption rates and total exemptions
+(makes mathematical sense).
+* Non-medical and MMR exemption rates have a strong positive correlation with 
+enrollment, but medical exemption rates do not.
 * A very striking relationship is that between non-medical and MMR exemption 
-rates and total exemption rate, in sharp contrast to the relationship between medical exemption rates and total exemption rate.
-* Medical and non-medical exemption rates or MMR exemption rates do not have a strong relationship. Non-medical exemption rates and MMR exemption rates have strong positive relationship.
+rates and total exemption rate, in sharp contrast to the relationship between 
+medical exemption rates and total exemption rate.
+* Medical and non-medical exemption rates or MMR exemption rates do not have a 
+strong relationship. Non-medical exemption rates and MMR exemption rates have 
+strong positive relationship.
 
 ### Did you observe any interesting relationships between the other features (not the main feature(s) of interest)?
 
-The median level is about the same for public vs. private (not-public) but the spread is much greater for private. I've looked at analyses from other states 
+The median level is about the same for public vs. private (not-public) but the 
+spread is much greater for private. I've looked at analyses from other states 
 that essentially show that not all private schools, even by type of private 
 school (Waldorf, Montessori) are created equal in terms of vaccinations
 attitudes (tendency towards personal/non-medical exemptions). I don't know if 
@@ -1020,8 +1072,11 @@ this is true of my data set, but there seems to be more variability in private
 vs. public schools. Plots suggest this is true of non-medical and MMR 
 exemptions, but not medical exemptions.
 
-Public shcools have a higher median and larger spread of total exemptions, non-medical exemptions, and MMR exemptions. The spread is very tight for medical exemptions, with comparable medians. Some of the variability in the public 
-schools can be explained by the fact that public schools have a larger range of enrolled students. However, this doesn't explain observations for medical exemptions.
+Public shcools have a higher median and larger spread of total exemptions, 
+non-medical exemptions, and MMR exemptions. The spread is very tight for medical exemptions, with comparable medians. Some of the variability in the public 
+schools can be explained by the fact that public schools have a larger range of 
+enrolled students. However, this doesn't explain observations for medical 
+exemptions.
 
 ### What was the strongest relationship you found?
 
@@ -1031,7 +1086,10 @@ and non-medical exemption rates.
 
 # Multivariate Plots Section
 
-Technically some of the bivariate plots could be considred multivariate since rates are derivative of more than once variable.  Below I try to understand whether relationships signifcantly as a function of year or school type.  I also include some other visualizatons to help foster an understanding of the data.
+Technically some of the bivariate plots could be considred multivariate since 
+rates are derivative of more than once variable.  Below I try to understand 
+whether relationships signifcantly as a function of year or school type.  I also
+include some other visualizatons to help foster an understanding of the data.
 
 ##Rates vs. total exemptions, by year##
 
